--- a/sitio-gasolineras/index.html
+++ b/sitio-gasolineras/index.html
@@ -21,10 +21,14 @@
 *{margin:0;padding:0;box-sizing:border-box}
 body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;overflow:hidden}
 #map{height:100vh;width:100%;position:fixed;top:0;left:0;z-index:1}
-.sidebar{position:fixed;left:0;top:0;width:400px;height:100vh;background:white;box-shadow:2px 0 10px rgba(0,0,0,.2);z-index:1000;display:flex;flex-direction:column}
+.sidebar{position:fixed;left:0;top:0;width:400px;height:100vh;background:white;box-shadow:2px 0 10px rgba(0,0,0,0.2);z-index:1000;display:flex;flex-direction:column}
 .sidebar-scroll{flex:1;overflow-y:auto}
+.comparator-panel{position:fixed;right:0;top:0;width:450px;height:100vh;background:white;box-shadow:-2px 0 10px rgba(0,0,0,0.2);z-index:1001;display:flex;flex-direction:column;transform:translateX(100%);transition:.3s}
+.comparator-panel.open{transform:translateX(0)}
+.selected-for-compare{background:#dbeafe!important;border-left:4px solid #2563eb!important}
 @media(max-width:768px){
 .sidebar{width:100%;height:50vh;top:auto;bottom:0}
+.comparator-panel{width:100%;height:70vh}
 #map{height:50vh}
 }
 </style>
@@ -36,111 +40,158 @@ body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;overflow
 
 <script type="text/babel">
 const { useState, useEffect } = React;
+let map=null,cluster=null,userMark=null;
 
-let map=null, cluster=null, userMark=null;
+const App=()=>{
+const[gas,setGas]=useState([]);
+const[items,setItems]=useState([]);
+const[load,setLoad]=useState(true);
+const[mode,setMode]=useState('gas');
+const[fuel,setFuel]=useState('Precio Gasolina 95 E5');
+const[search,setSearch]=useState('');
+const[loc,setLoc]=useState(null);
+const[comp,setComp]=useState(false);
+const[sel,setSel]=useState([]);
 
-const App = () => {
-  const [gas,setGas]=useState([]);
-  const [items,setItems]=useState([]);
-  const [loading,setLoading]=useState(true);
-  const [search,setSearch]=useState('');
-  const [fuel,setFuel]=useState('Precio Gasolina 95 E5');
+useEffect(()=>{
+if(!map){
+map=L.map('map').setView([40.4,-3.7],7);
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:19}).addTo(map);
+cluster=L.markerClusterGroup({maxClusterRadius:50});
+map.addLayer(cluster);
+setTimeout(()=>map.invalidateSize(),200);
+}
+fetchGas();
+getLoc();
+},[]);
 
-  useEffect(()=>{
-    if(!map){
-      map=L.map('map').setView([40.4,-3.7],7);
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:19}).addTo(map);
-      cluster=L.markerClusterGroup({maxClusterRadius:50});
-      map.addLayer(cluster);
-      setTimeout(()=>map.invalidateSize(),200);
-    }
-    fetchGas();
-    getLoc();
-  },[]);
-
-  const fetchGas = async () => {
-    const r = await fetch(
-      'https://sedeaplicaciones.minetur.gob.es/ServiciosRESTCarburantes/PreciosCarburantes/EstacionesTerrestres/'
-    );
-    const d = await r.json();
-    const g = d.ListaEESSPrecio.map(s=>({
-      id:s.IDEESS,
-      name:s['Rótulo'],
-      town:s['Municipio'],
-      prov:s['Provincia'],
-      lat:parseFloat(s['Latitud'].replace(',','.')),
-      lng:parseFloat(s['Longitud (WGS84)'].replace(',','.')),
-      price:parseFloat(s[fuel]?.replace(',','.'))||null
-    }));
-    setGas(g);
-    setItems(g);
-    setLoading(false);
-  };
-
-  const getLoc = () => {
-    navigator.geolocation?.getCurrentPosition(p=>{
-      const l={lat:p.coords.latitude,lng:p.coords.longitude};
-      map.setView([l.lat,l.lng],11);
-      userMark=L.marker([l.lat,l.lng]).addTo(map).bindPopup('📍 Tú');
-    });
-  };
-
-  useEffect(()=>{
-    if(!cluster) return;
-    cluster.clearLayers();
-    items.forEach(i=>{
-      if(!i.lat||!i.lng) return;
-      const m=L.marker([i.lat,i.lng]).bindPopup(
-        `<strong>${i.name}</strong><br>${i.town} (${i.prov})<br>${i.price?.toFixed(3)} €/L`
-      );
-      cluster.addLayer(m);
-    });
-  },[items]);
-
-  useEffect(()=>{
-    let res=[...gas];
-    if(search){
-      res=res.filter(i=>
-        i.name?.toLowerCase().includes(search.toLowerCase())||
-        i.town?.toLowerCase().includes(search.toLowerCase())
-      );
-    }
-    setItems(res);
-  },[search,gas]);
-
-  if(loading){
-    return <div className="sidebar flex items-center justify-center">Cargando…</div>;
-  }
-
-  return (
-    <div className="sidebar">
-      <div className="p-4 border-b">
-        <input
-          className="w-full border p-2 rounded"
-          placeholder="Buscar gasolinera o ciudad"
-          value={search}
-          onChange={e=>setSearch(e.target.value)}
-        />
-      </div>
-
-      <div className="sidebar-scroll">
-        {items.map(i=>(
-          <div key={i.id} className="p-4 border-b text-sm">
-            <strong>{i.name}</strong>
-            <div className="text-xs text-gray-600">{i.town} · {i.prov}</div>
-            {i.price && (
-              <div className="font-bold mt-1">
-                {i.price.toFixed(3)} €/L
-              </div>
-            )}
-          </div>
-        ))}
-      </div>
-    </div>
-  );
+const fetchGas=async()=>{
+const r=await fetch('https://sedeaplicaciones.minetur.gob.es/ServiciosRESTCarburantes/PreciosCarburantes/EstacionesTerrestres/');
+const d=await r.json();
+const g=d.ListaEESSPrecio.map(s=>({
+id:'g-'+s.IDEESS,
+type:'gas',
+name:s['Rótulo'],
+town:s['Municipio'],
+prov:s['Provincia'],
+lat:+s['Latitud'].replace(',','.'),
+lng:+s['Longitud (WGS84)'].replace(',','.'),
+price:+s[fuel]?.replace(',','.')||null
+}));
+setGas(g);
+setLoad(false);
 };
 
-ReactDOM.render(<App/>, document.getElementById('root'));
+const getLoc=()=>{
+navigator.geolocation?.getCurrentPosition(p=>{
+const l={lat:p.coords.latitude,lng:p.coords.longitude};
+setLoc(l);
+map.setView([l.lat,l.lng],11);
+if(userMark)userMark.remove();
+userMark=L.marker([l.lat,l.lng]).addTo(map).bindPopup('📍 Tú');
+});
+};
+
+useEffect(()=>{
+let res=[...gas];
+if(search){
+res=res.filter(i=>
+i.name?.toLowerCase().includes(search.toLowerCase())||
+i.town?.toLowerCase().includes(search.toLowerCase())
+);
+}
+setItems(res);
+},[gas,search]);
+
+useEffect(()=>{
+if(!cluster)return;
+cluster.clearLayers();
+items.forEach(i=>{
+if(!i.lat||!i.lng)return;
+const m=L.marker([i.lat,i.lng]).bindPopup(
+`<strong>${i.name}</strong><br>${i.town} (${i.prov})<br>${i.price?.toFixed(3)} €/L`
+);
+cluster.addLayer(m);
+});
+},[items]);
+
+const toggleCompare=()=>{if(comp)setSel([]);setComp(!comp)};
+const toggleSelect=i=>{
+if(sel.find(x=>x.id===i.id))setSel(sel.filter(x=>x.id!==i.id));
+else if(sel.length<2)setSel([...sel,i]);
+};
+
+if(load)return<div className="sidebar flex items-center justify-center">Cargando…</div>;
+
+return(
+<>
+<div className="sidebar">
+<div className="p-4 bg-blue-600 text-white flex justify-between items-center">
+<span>⛽ Gasolineras</span>
+<button onClick={toggleCompare} className="bg-white text-blue-600 px-3 py-1 rounded text-sm">
+{comp?'Cancelar':'Comparar'}
+</button>
+</div>
+
+<div className="p-4">
+<input
+className="w-full border p-2 rounded"
+placeholder="Buscar"
+value={search}
+onChange={e=>setSearch(e.target.value)}
+/>
+</div>
+
+<div className="sidebar-scroll">
+{items.map(i=>(
+<div key={i.id} className={`p-4 border-b ${sel.find(x=>x.id===i.id)?'selected-for-compare':''}`}>
+<strong>{i.name}</strong>
+<div className="text-xs text-gray-600">{i.town} · {i.prov}</div>
+<div className="font-bold">{i.price?.toFixed(3)} €/L</div>
+{comp&&(
+<button
+onClick={()=>toggleSelect(i)}
+className="mt-2 text-xs bg-blue-600 text-white px-2 py-1 rounded"
+>
+Seleccionar
+</button>
+)}
+</div>
+))}
+</div>
+</div>
+
+<Comparator stations={sel} />
+</>
+);
+};
+
+const Comparator=({stations})=>{
+if(stations.length!==2)return null;
+const[a,b]=stations;
+const diff=(b.price-a.price).toFixed(3);
+
+return(
+<div className="comparator-panel open">
+<div className="p-4 bg-purple-600 text-white font-bold">⚖️ Comparador</div>
+<div className="p-4 space-y-4">
+<div>
+<strong>{a.name}</strong>
+<div>{a.price.toFixed(3)} €/L</div>
+</div>
+<div>
+<strong>{b.name}</strong>
+<div>{b.price.toFixed(3)} €/L</div>
+</div>
+<div className="font-bold text-lg">
+Diferencia: {diff} €/L
+</div>
+</div>
+</div>
+);
+};
+
+ReactDOM.render(<App/>,document.getElementById('root'));
 </script>
 </body>
 </html>
